2.2.0/_sources/arcgis.gis.admin.rst.txt
arcgis.gis.admin module
====================

.. automodule:: arcgis.gis.admin

AGOLAdminManager
---------------
.. autoclass:: arcgis.gis.admin.AGOLAdminManager
    :members:
    :undoc-members:
    :show-inheritance:

DataStoreMetricsManager
-----------------------
.. autoclass:: arcgis.gis.admin.DataStoreMetricsManager
    :members:
    :undoc-members:
    :show-inheritance:
 
DataStoreAggregation
-----------------------
.. autoclass:: arcgis.gis.admin.DataStoreAggregation
    :members:
    :undoc-members:
    :show-inheritance:

DataStoreTimeUnit
-----------------------
.. autoclass:: arcgis.gis.admin.DataStoreTimeUnit
    :members:
    :undoc-members:
    :show-inheritance:

DataStoreMetric
-----------------------
.. autoclass:: arcgis.gis.admin.DataStoreMetric
    :members:
    :undoc-members:
    :show-inheritance:

PortalAdminManager
------------------
.. autoclass:: arcgis.gis.admin.PortalAdminManager
    :members:
    :undoc-members:
    :show-inheritance:

KubernetesAdmin
---------------
.. autoclass:: arcgis.gis.kubernetes.KubernetesAdmin
    :members:
    :undoc-members:
    :show-inheritance:
   
KbertnetesPy
------------
.. autoclass:: arcgis.gis.kubernetes.KbertnetesPy
    :members:
    :undoc-members:
    :show-inheritance:

KubeServiceDirectory
--------------------
.. autoclass:: arcgis.gis.kubernetes._server.KubeServiceDirectory
    :members:
    :undoc-members:
    :show-inheritance:
        
WebAdaptorManager
------------------
.. autoclass:: arcgis.gis.kubernetes.WebAdaptorManager
    :members:
    :undoc-members:
    :show-inheritance:
    
ArchitectureManager
-------------------
.. autoclass:: arcgis.gis.kubernetes.ArchitectureManager
    :members:
    :undoc-members:
    :show-inheritance:
    
AGOLUsageReports
---------------
.. autoclass:: arcgis.gis.admin.AGOLUsageReports
    :members:
    :undoc-members:
    :show-inheritance:

Bundle
---------------
.. autoclass:: arcgis.gis.admin.Bundle
    :members:
    :undoc-members:
    :show-inheritance:

CategoryManager
---------------
.. autoclass:: arcgis.gis.admin.CategoryManager
    :members:
    :undoc-members:
    :show-inheritance:

CollaborationManager
--------------------
.. autoclass:: arcgis.gis.admin.CollaborationManager
    :members:
    :undoc-members:
    :show-inheritance:

Collaboration
---------------
.. autoclass:: arcgis.gis.admin.Collaboration
    :members:
    :undoc-members:
    :show-inheritance:

CreditManager
---------------
.. autoclass:: arcgis.gis.admin.CreditManager
    :members:
    :undoc-members:
    :show-inheritance:

License
---------------
.. autoclass:: arcgis.gis.admin.License
    :members:
    :undoc-members:
    :show-inheritance:

LicenseManager
---------------
.. autoclass:: arcgis.gis.admin.LicenseManager
    :members:
    :undoc-members:
    :show-inheritance:

LivingAtlas
-----------
.. autoclass:: arcgis.gis.admin.LivingAtlas
    :members:
    :undoc-members:

IdentityProviderManager
-----------------------
.. autoclass:: arcgis.gis.admin.IdentityProviderManager
    :members:
    :undoc-members:
    :show-inheritance:

PasswordPolicy
---------------
.. autoclass:: arcgis.gis.admin.PasswordPolicy
    :members:
    :undoc-members:
    :show-inheritance:

PortalResourceManager
---------------------
.. autoclass:: arcgis.gis.admin.PortalResourceManager
    :members:
    :undoc-members:
    :show-inheritance:

UX
---------------
.. autoclass:: arcgis.gis.admin.UX
    :members:
    :undoc-members:
    :show-inheritance:

HomePageSettings
----------------
.. autoclass:: arcgis.gis.admin.HomePageSettings
    :members:
    :undoc-members:
    :show-inheritance:

ItemSettings
----------------
.. autoclass:: arcgis.gis.admin.ItemSettings
    :members:
    :undoc-members:
    :show-inheritance:

MapSettings
----------------
.. autoclass:: arcgis.gis.admin.MapSettings
    :members:
    :undoc-members:
    :show-inheritance:

SecuritySettings
----------------
.. autoclass:: arcgis.gis.admin.SecuritySettings
    :members:
    :undoc-members:
    :show-inheritance:

EmailManager
------------
.. autoclass:: arcgis.gis.admin.EmailManager
   :members:
   :undoc-members:
   :show-inheritance:
   
Federation
---------------
.. autoclass:: arcgis.gis.admin.Federation
   :members:
   :undoc-members:
   :show-inheritance:

Indexer
-------
.. autoclass:: arcgis.gis.admin.Indexer
   :members:
   :undoc-members:
   :show-inheritance:

Logs
---------------
.. autoclass:: arcgis.gis.admin.Logs
   :members:
   :undoc-members:
   :show-inheritance:

Machines
---------------
.. autoclass:: arcgis.gis.admin.Machines
   :members:
   :undoc-members:
   :show-inheritance:


Security
---------------
.. autoclass:: arcgis.gis.admin.Security
   :members:
   :undoc-members:


OAuth
---------------
.. autoclass:: arcgis.gis.admin.OAuth
   :members:
   :undoc-members:


SSLCertificate
---------------
.. autoclass:: arcgis.gis.admin.SSLCertificate
   :members:
   :undoc-members:

SSLCertificates
---------------
.. autoclass:: arcgis.gis.admin.SSLCertificates
   :members:
   :undoc-members:


EnterpriseUsers
---------------
.. autoclass:: arcgis.gis.admin.EnterpriseUsers
   :members:
   :undoc-members:

EnterpriseGroups
----------------
.. autoclass:: arcgis.gis.admin.EnterpriseGroups
   :members:
   :undoc-members:

Site
---------------
.. autoclass:: arcgis.gis.admin.Site
   :members:
   :undoc-members:
   :show-inheritance:

System
---------------
.. autoclass:: arcgis.gis.admin.System
   :members:
   :undoc-members:


Licenses (Deprecated 10.7+)
---------------------------
.. autoclass:: arcgis.gis.admin.Licenses
   :members:
   :undoc-members:

PortalLicense
---------------
.. autoclass:: arcgis.gis.admin.PortalLicense
   :members:
   :undoc-members:

Directory
---------------
.. autoclass:: arcgis.gis.admin.Directory
   :members:
   :undoc-members:

WebAdaptor
---------------
.. autoclass:: arcgis.gis.admin.WebAdaptor
   :members:
   :undoc-members:

WebAdaptors
---------------
.. autoclass:: arcgis.gis.admin.WebAdaptors
   :members:
   :undoc-members:

WebhookManager
---------------
.. autoclass:: arcgis.gis.admin.WebhookManager
   :members:
   :undoc-members:

Webhook
---------------
.. autoclass:: arcgis.gis.admin.Webhook
   :members:
   :undoc-members:

SocialProviders
---------------
.. autoclass:: arcgis.gis.admin.SocialProviders
   :members:
   :undoc-members:

MetadataManager
---------------
.. autoclass:: arcgis.gis.admin.MetadataManager
   :members:
   :undoc-members:
    
ExternalContentManager
----------------------
.. autoclass:: arcgis.gis.kubernetes.ExternalContentManager
    :members:
    :undoc-members:
    :show-inheritance:

LanguageManager
---------------
.. autoclass:: arcgis.gis.kubernetes.LanguageManager
    :members:
    :undoc-members:
    :show-inheritance:

DataStores
----------
.. autoclass:: arcgis.gis.kubernetes.DataStores
    :members:
    :undoc-members:
    :show-inheritance:

DataStore
---------
.. autoclass:: arcgis.gis.kubernetes.DataStore
    :members:
    :undoc-members:
    :show-inheritance:

Deployment
----------
.. autoclass:: arcgis.gis.kubernetes.Deployment
    :members:
    :undoc-members:
    :show-inheritance:

Job
---
.. autoclass:: arcgis.gis.kubernetes.Job
    :members:
    :undoc-members:
    :show-inheritance:
    
JobManager
----------
.. autoclass:: arcgis.gis.kubernetes.JobManager
    :members:
    :undoc-members:
    :show-inheritance:
    
Backup
-------------
.. autoclass:: arcgis.gis.kubernetes.Backup
    :members:
    :undoc-members:
    :show-inheritance:

BackupStoresManager
-------------------
.. autoclass:: arcgis.gis.kubernetes.BackupStoresManager
    :members:
    :undoc-members:
    :show-inheritance:

BackupStore
------------
.. autoclass:: arcgis.gis.kubernetes.BackupStore
    :members:
    :undoc-members:
    :show-inheritance:

RecoveryManager
---------------
.. autoclass:: arcgis.gis.kubernetes.RecoveryManager
    :members:
    :undoc-members:
    :show-inheritance:
    
LicenseManager
--------------
.. autoclass:: arcgis.gis.kubernetes.LicenseManager
    :members:
    :undoc-members:
    :show-inheritance:

LogManager
----------
.. autoclass:: arcgis.gis.kubernetes.LogManager
    :members:
    :undoc-members:
    :show-inheritance:

Mode
----
.. autoclass:: arcgis.gis.kubernetes.Mode
    :members:
    :undoc-members:
    :show-inheritance:

Overview
--------
.. autoclass:: arcgis.gis.kubernetes.Overview
    :members:
    :undoc-members:
    :show-inheritance:

KubeEnterpriseGroups
--------------------
.. autoclass:: arcgis.gis.kubernetes.KubeEnterpriseGroups
    :members:
    :undoc-members:
    :show-inheritance:

KubeEnterpriseUser
------------------
.. autoclass:: arcgis.gis.kubernetes.KubeEnterpriseUser
    :members:
    :undoc-members:
    :show-inheritance:
        
KubeOrganization
----------------
.. autoclass:: arcgis.gis.kubernetes.KubeOrganization
    :members:
    :undoc-members:
    :show-inheritance:
    
KubeOrganizations
-----------------
.. autoclass:: arcgis.gis.kubernetes.KubeOrganizations
    :members:
    :undoc-members:
    :show-inheritance:

KubeOrgFederations
------------------
.. autoclass:: arcgis.gis.kubernetes.KubeOrgFederations
    :members:
    :undoc-members:
    :show-inheritance:
    
KubeOrgLicense
--------------
.. autoclass:: arcgis.gis.kubernetes.KubeOrgLicense
    :members:
    :undoc-members:
    :show-inheritance:
    
KubeOrgSecurity
---------------
.. autoclass:: arcgis.gis.kubernetes.KubeOrgSecurity
    :members:
    :undoc-members:
    :show-inheritance:

KubeSecurity
------------
.. autoclass:: arcgis.gis.kubernetes.KubeSecurity
    :members:
    :undoc-members:
    :show-inheritance:
    
KubeSecurityCert
----------------
.. autoclass:: arcgis.gis.kubernetes.KubeSecurityCert
    :members:
    :undoc-members:
    :show-inheritance:
    
KubeSecurityConfig
------------------
.. autoclass:: arcgis.gis.kubernetes.KubeSecurityConfig
    :members:
    :undoc-members:
    :show-inheritance:
    
KubeSecurityIngress
-------------------
.. autoclass:: arcgis.gis.kubernetes.KubeSecurityIngress
    :members:
    :undoc-members:
    :show-inheritance:
    
KubeSecuritySAML
----------------
.. autoclass:: arcgis.gis.kubernetes.KubeSecuritySAML
    :members:
    :undoc-members:
    :show-inheritance:

KubeService
-----------
.. autoclass:: arcgis.gis.kubernetes.KubeService
    :members:
    :undoc-members:
    :show-inheritance:
    
GPJobManager
------------
.. autoclass:: arcgis.gis.kubernetes.GPJobManager
    :members:
    :undoc-members:
    :show-inheritance:
    
ServicesManager
---------------
.. autoclass:: arcgis.gis.kubernetes.ServicesManager
    :members:
    :undoc-members:
    :show-inheritance:

Container
---------
.. autoclass:: arcgis.gis.kubernetes.Container
    :members:
    :undoc-members:
    :show-inheritance:
    
Indexer
-------
.. autoclass:: arcgis.gis.kubernetes.Indexer
    :members:
    :undoc-members:
    :show-inheritance:

Server
------
.. autoclass:: arcgis.gis.kubernetes.Server
    :members:
    :undoc-members:
    :show-inheritance:
    
ServerDefaults
--------------
.. autoclass:: arcgis.gis.kubernetes.ServerDefaults
    :members:
    :undoc-members:
    :show-inheritance:
    
ServerManager
-------------
.. autoclass:: arcgis.gis.kubernetes.ServerManager
    :members:
    :undoc-members:
    :show-inheritance:
    
SystemManager
-------------
.. autoclass:: arcgis.gis.kubernetes.SystemManager
    :members:
    :undoc-members:
    :show-inheritance:
    
TaskManager
-----------
.. autoclass:: arcgis.gis.kubernetes.TaskManager
    :members:
    :undoc-members:
    :show-inheritance:
    
UpgradeManager
--------------
.. autoclass:: arcgis.gis.kubernetes.UpgradeManager
    :members:
    :undoc-members:
    :show-inheritance:
    
Uploads
-------
.. autoclass:: arcgis.gis.kubernetes.Uploads
    :members:
    :undoc-members:
    :show-inheritance:
    
UsageStatistics
---------------
.. autoclass:: arcgis.gis.kubernetes.UsageStatistics
    :members:
    :undoc-members:
    :show-inheritance: